--- a/footer.html
+++ b/footer.html
@@ -15,7 +15,7 @@
                  <div class="share">
                      <a href="https://sg.linkedin.com/in/lee-pei-yi-28b5bb273" style="display: flex; justify-content: center; align-items: center;" aria-label="LinkedIn" target="_blank">
                          <img width="30" height="30" src="https://img.icons8.com/color/48/linkedin.png" alt="linkedin" /></a>
-                     <a href="https://github.com/peiyilee" aria-label="GitHub" target="_blank" style="display: flex; justify-content: center; align-items: center;">
+                     <a href="https://github.com/leepeiyi" aria-label="GitHub" target="_blank" style="display: flex; justify-content: center; align-items: center;">
                          <img width="30" height="30" src="https://img.icons8.com/material-outlined/24/github.png" alt="GitHub">
                      </a>
                  </div>
